--- a/quem_somos.html
+++ b/quem_somos.html
@@ -73,34 +73,34 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-12 mb-20">
                 <div class="team-card text-center" data-aos="fade-up">
                     <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?auto=format&fit=crop&q=80&w=200" alt="Consultoria Automóvel" class="profile-img mx-auto mb-6 shadow-lg">
-                    <h3 class="font-bold text-xl text-brand-navy mb-3">Consultoria de Mobilidade</h3>
-                    <p class="text-sm text-slate-500 leading-relaxed px-4">Sugerimos soluções de mobilidade adequadas às suas necessidades de forma imparcial, com foco absoluto na eficiência e produtividade do seu negócio.</p>
+                    <h3 class="font-bold text-xl text-brand-navy mb-3">Gerson Tavares</h3>
+                    <p class="text-sm text-slate-500 leading-relaxed px-4">Profissional com formação em Gestão de Empresas e percurso internacional no setor industrial e automóvel (Yazaki EMEA). A experiência como Project e Account Manager em contextos B2B complexos permitiu-lhe desenvolver competências sólidas em gestão de projetos, Risk Management, controlo de P&L e desenvolvimento de negócio. Contribui para a FleetWise com uma perspetiva estratégica orientada para a implementação e execução de projetos de maior risco, assegurando a entrega de valor e a sustentabilidade operacional do plano de negócios.</p>
                 </div>
 
                 <div class="team-card text-center" data-aos="fade-up" data-aos-delay="100">
                     <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?auto=format&fit=crop&q=80&w=200" alt="Otimização de Custos" class="profile-img mx-auto mb-6 shadow-lg">
-                    <h3 class="font-bold text-xl text-brand-navy mb-3">Otimização & Custos</h3>
-                    <p class="text-sm text-slate-500 leading-relaxed px-4">Desenvolvemos as soluções que não existem, reduzimos custos que pareciam insignificantes e fomentamos relações comerciais onde inicialmente não existiam oportunidades.</p>
+                    <h3 class="font-bold text-xl text-brand-navy mb-3">João Duarte</h3>
+                    <p class="text-sm text-slate-500 leading-relaxed px-4">Como Diretor Comercial na Caetano BMW, aporta uma combinação crítica de rigor técnico e de visão de negócio. A sua experiência profissional é marcada por uma vasta experiência no setor automóvel, onde desempenhou funções de liderança em marcas do segmento premium. O conhecimento profundo do ecossistema de retalho automóvel, gestão de vendas e estratégia de produto são ativos fundamentais para estruturar as funções “core” da Fleetwise, garantindo que o modelo de negócio está alinhado com as exigências técnicas e dinâmicas de rentabilidade do mercado automóvel.</p>
                 </div>
 
                 <div class="team-card text-center" data-aos="fade-up" data-aos-delay="200">
                     <img src="https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?auto=format&fit=crop&q=80&w=200" alt="IA e Tecnologia" class="profile-img mx-auto mb-6 shadow-lg">
-                    <h3 class="font-bold text-xl text-brand-navy mb-3">Tecnologia & IA</h3>
-                    <p class="text-sm text-slate-500 leading-relaxed px-4">Tiramos partido da IA para nos ajudar no dia-a-dia e pretendemos que a sua empresa faça o mesmo, mitigando perdas de tempo e de recursos críticos.</p>
+                    <h3 class="font-bold text-xl text-brand-navy mb-3">Luís Vergueiro</h3>
+                    <p class="text-sm text-slate-500 leading-relaxed px-4">Acrescenta à FleetWise uma combinação estratégica de rigor académico e experiência multissetorial em negociação e desenvolvimento de negócio. Com um percurso consolidado em marcas de referência como Sumol Compal, Glovo e Sogrape, o seu diferencial reside no conhecimento operacional direto do setor automóvel, adquirido na Peugeot Rent - Gamobar. Esta visão prática em gestão de frotas, aliada à competência em consultoria e inovação desenvolvida na B2Innovation, é fundamental para estruturar modelos de rentabilidade e soluções de mobilidade disruptivas para a consultora.</p>
                 </div>
             </div>
 
             <div class="flex flex-col md:flex-row justify-center gap-12 md:gap-32">
                 <div class="team-card w-full md:w-80 text-center" data-aos="fade-up" data-aos-delay="300">
                     <img src="https://images.unsplash.com/photo-1551836022-d5d88e9218df?auto=format&fit=crop&q=80&w=200" alt="Independência" class="profile-img mx-auto mb-6 shadow-lg">
-                    <h3 class="font-bold text-xl text-brand-navy mb-3">Independência Total</h3>
+                    <h3 class="font-bold text-xl text-brand-navy mb-3">Nuno Nápoles</h3>
                     <p class="text-sm text-slate-500 leading-relaxed px-4">Atuamos sem vínculos a marcas ou locadoras, garantindo que o único interesse defendido é o da sua frota e da sua rentabilidade financeira.</p>
                 </div>
 
                 <div class="team-card w-full md:w-80 text-center" data-aos="fade-up" data-aos-delay="400">
                     <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?auto=format&fit=crop&q=80&w=200" alt="Parcerias e Valor" class="profile-img mx-auto mb-6 shadow-lg">
-                    <h3 class="font-bold text-xl text-brand-navy mb-3">Relações de Valor</h3>
-                    <p class="text-sm text-slate-500 leading-relaxed px-4">No fundo, fazemos muito com pouco! Fomentamos relações de confiança com parceiros estratégicos para entregar vantagens exclusivas aos nossos clientes.</p>
+                    <h3 class="font-bold text-xl text-brand-navy mb-3">Rui Coelho</h3>
+                    <p class="text-sm text-slate-500 leading-relaxed px-4">Profissional de Gestão de Pessoas com formação em Psicologia Organizacional e experiência nas áreas de talento, desempenho, liderança e cultura, tendo passado por empresas de retalho (Sonae), indústria (Efacec) e financeiro/seguros (Grupo Ageas Portugal). Trabalhou inclusive ao nível internacional, em Angola, numa empresa de retalho e investimento (Carrinho Empreendimentos), como responsável de Recursos Humanos. Contribui para o projeto com uma perspetiva humana e estruturada, garantindo que a FleetWise integra desde início práticas consistentes de competências, desenvolvimento e gestão da mudança alinhadas com o comportamento organizacional.</p>
                 </div>
             </div>
 
