--- a/quem_somos.html
+++ b/quem_somos.html
@@ -94,7 +94,7 @@
                 <div class="team-card w-full md:w-80 text-center" data-aos="fade-up" data-aos-delay="300">
                     <img src="https://images.unsplash.com/photo-1551836022-d5d88e9218df?auto=format&fit=crop&q=80&w=200" alt="Independência" class="profile-img mx-auto mb-6 shadow-lg">
                     <h3 class="font-bold text-xl text-brand-navy mb-3">Nuno Nápoles</h3>
-                    <p class="text-sm text-slate-500 leading-relaxed px-4">Atuamos sem vínculos a marcas ou locadoras, garantindo que o único interesse defendido é o da sua frota e da sua rentabilidade financeira.</p>
+                    <p class="text-sm text-slate-500 leading-relaxed px-4">Acrescenta à FleetWise uma combinação estratégica de rigor académico e experiência multissetorial em negociação e desenvolvimento de negócio. Com um percurso consolidado em marcas de referência como Sumol Compal, Glovo e Sogrape, o seu diferencial reside no conhecimento operacional direto do setor automóvel, adquirido na Peugeot Rent - Gamobar. Esta visão prática em gestão de frotas, aliada à competência em consultoria e inovação desenvolvida na B2Innovation, é fundamental para estruturar modelos de rentabilidade e soluções de mobilidade disruptivas para a consultora.</p>
                 </div>
 
                 <div class="team-card w-full md:w-80 text-center" data-aos="fade-up" data-aos-delay="400">
