--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </div>
 
                 <a href="vehicle_compare.html" class="text-sm font-medium hover:text-brand-green transition">Comparador xEV</a>
-                <a href="quem_somos.html" class="text-sm font-medium hover:text-brand-green transition">Quem Somos</a>
+                <a href="quem_somos2.html" class="text-sm font-medium hover:text-brand-green transition">Quem Somos</a>
                 <a href="loja.html" class="bg-brand-green text-white px-5 py-2 rounded-full text-sm font-bold hover:bg-emerald-600 transition">Loja</a>
             </nav>
 
