--- a/quem_somos2.html
+++ b/quem_somos2.html
@@ -92,32 +92,32 @@
                 
                 <div class="team-card text-center group" onmouseover="showText('gerson')" onclick="showText('gerson')">
                     <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?auto=format&fit=crop&q=80&w=200" class="profile-img mx-auto mb-4 shadow-lg">
-                    <h3 class="text-lg font-bold text-brand-navy">Gerson Tavares</h3>
-                    <p class="text-xs text-brand-green uppercase tracking-tight">Gestão & Account Manager</p>
+                    <h3 class="text-lg font-bold text-brand-green">Gerson Tavares</h3>
+                    <p class="text-xs text-brand-navy uppercase tracking-tight">Gestão & Account Manager</p>
                 </div>
 
                 <div class="team-card text-center group" onmouseover="showText('joao')" onclick="showText('joao')">
                     <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?auto=format&fit=crop&q=80&w=200" class="profile-img mx-auto mb-4 shadow-lg">
-                    <h3 class="text-lg font-bold text-brand-navy">João Duarte</h3>
-                    <p class="text-xs text-brand-green uppercase tracking-tight">Eng. Mecânica & Dir. Comercial</p>
+                    <h3 class="text-lg font-bold text-brand-green">João Duarte</h3>
+                    <p class="text-xs text-brand-navy uppercase tracking-tight">Eng. Mecânica & Dir. Comercial</p>
                 </div>
 
                 <div class="team-card text-center group" onmouseover="showText('luis')" onclick="showText('luis')">
                     <img src="https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?auto=format&fit=crop&q=80&w=200" class="profile-img mx-auto mb-4 shadow-lg">
-                    <h3 class="text-lg font-bold text-brand-navy">Luís Vergueiro</h3>
-                    <p class="text-xs text-brand-green uppercase tracking-tight">Eng. Alimentar & Gestão</p>
+                    <h3 class="text-lg font-bold text-brand-green">Luís Vergueiro</h3>
+                    <p class="text-xs text-brand-navy uppercase tracking-tight">Eng. Alimentar & Gestão</p>
                 </div>
 
                 <div class="team-card text-center group" onmouseover="showText('nuno')" onclick="showText('nuno')">
                     <img src="https://images.unsplash.com/photo-1551836022-d5d88e9218df?auto=format&fit=crop&q=80&w=200" class="profile-img mx-auto mb-4 shadow-lg">
-                    <h3 class="text-lg font-bold text-brand-navy">Nuno Nápoles</h3>
-                    <p class="text-xs text-brand-green uppercase tracking-tight">Marketing & Gestão Comercial</p>
+                    <h3 class="text-lg font-bold text-brand-green">Nuno Nápoles</h3>
+                    <p class="text-xs text-brand-navy uppercase tracking-tight">Marketing & Gestão Comercial</p>
                 </div>
 
                 <div class="team-card text-center group" onmouseover="showText('rui')" onclick="showText('rui')">
                     <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?auto=format&fit=crop&q=80&w=200" class="profile-img mx-auto mb-4 shadow-lg">
-                    <h3 class="text-lg font-bold text-brand-navy">Rui Coelho</h3>
-                    <p class="text-xs text-brand-green uppercase tracking-tight">Psicologia & Pessoas</p>
+                    <h3 class="text-lg font-bold text-brand-green">Rui Coelho</h3>
+                    <p class="text-xs text-brand-navy uppercase tracking-tight">Psicologia & Pessoas</p>
                 </div>
 
             </div>
