--- a/quem_somos.html
+++ b/quem_somos.html
@@ -145,7 +145,7 @@
 
     <footer class="bg-brand-navy text-slate-500 py-12 text-center text-sm border-t border-slate-800">
         <div class="max-w-7xl mx-auto px-4">
-            <p>Copyright © 2026 FleetWise. Todos os direitos reservados.</p>
+            <p>Copyright © 2026 FleetWise.</p>
         </div>
     </footer>
 
