--- a/loja.html
+++ b/loja.html
@@ -156,7 +156,7 @@
     </section>
 
     <footer class="bg-brand-navy text-slate-500 py-8 text-center text-xs">
-        <p>Copyright © 2026 FleetWise - Loja Oficial</p>
+        <p>Copyright © 2026 FleetWise</p>
     </footer>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
