--- a/index2.html
+++ b/index2.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>FleetWise - v3.62</title>
+    <title>FleetWise - v3.63</title>
     
     <link rel="icon" type="image/png" href="favicon.png">
 
@@ -44,7 +43,7 @@
 
         .pill-image-oversized { border-radius: 160px; width: 325px; height: 570px; object-fit: cover; display: block; }
 
-        /* MOBILE MENU - SINCRONIZADO COM DESKTOP */
+        /* MOBILE MENU */
         #mobile-menu {
             position: fixed; top: 0; right: -100%; width: 85%; height: 100%;
             background: #0f172a; z-index: 2001; transition: 0.4s cubic-bezier(0.4, 0, 0.2, 1); padding: 2rem;
@@ -127,9 +126,8 @@
         <a href="#servicos" class="mobile-link" onclick="toggleMobileMenu()">Serviços</a>
         <a href="#parcerias-section" class="mobile-link" onclick="toggleMobileMenu()">Parcerias</a>
         <a href="vehicle_compare.html" class="mobile-link">Comparador xEV</a>
-        <a href="quem_somos2.html" class="mobile-link">Quem Somos</a>
+        <a href="quem_somos.html" class="mobile-link" onclick="toggleMobileMenu()">Quem Somos</a>
         <a href="loja.html" class="mt-4 bg-brand-green text-center py-4 rounded-xl font-bold text-white shadow-lg">Loja</a>
-        <a href="TCO_simulator.html" class="bg-slate-700 text-center py-4 rounded-xl font-bold text-white">Simular TCO</a>
     </div>
 
     <section class="max-w-7xl mx-auto px-4 py-12">
