--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div class="hero-container flex flex-col md:flex-row gap-10 items-stretch">
             <div class="hero-left w-full md:w-[70%] flex flex-col justify-between" data-aos="fade-right">
                 <div>
-                    <h1 class="text-5xl hero-title mb-8 text-left font-bold text-brand-navy">Simplifique, Otimize, Rentabilize!</h1>
+                    <h1 class="text-5xl hero-title mb-8 text-left font-regular text-brand-navy">Simplifique, Otimize, Rentabilize!</h1>
                     <div class="space-y-6 text-slate-600 leading-relaxed text-sm text-justify">
                         <p>Na <span class="font-bold text-brand-navy">FleetWise</span> desenvolvemos as soluções que não existem, reduzimos custos que pareciam insignificantes e fomentamos relações comerciais onde inicialmente não existiam Oportunidades. No fundo, fazemos muito com pouco!</p>
                         <p>Somos uma consultora com foco no negócio automóvel. Sugerimos soluções de mobilidade adequadas às suas necessidades de forma imparcial, desenvolvemos soluções à medida para mitigar perdas de tempo ou de recursos, sempre com um grande foco na eficiência e produtividade.</p>
