--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>FleetWise - v3.69</title>
+    <title>FleetWise - v3.70</title>
     
     <link rel="icon" type="image/png" href="favicon.png">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -122,12 +122,12 @@
                     </div>
                 </div>
                 <div class="mt-10 overflow-hidden rounded-lg shadow-xl">
-                    <img src="Tesla-Model-Y-Portugal.webp" alt="Tesla" class="w-full h-[280px] object-cover rounded-xl">
+                    <img src="img/Tesla-Model-Y-Portugal.webp" alt="Tesla" class="w-full h-[280px] object-cover rounded-xl">
                 </div>
             </div>
             <div class="hero-right w-full md:w-[30%] flex flex-col gap-6" data-aos="fade-left">
-                <div class="rounded-lg overflow-hidden shadow-md"><img src="Polestar_4-6-1024x577.jpg" alt="Polestar" class="w-full h-[200px] object-cover"></div>
-                <div class="rounded-lg overflow-hidden shadow-lg flex-grow"><img src="53615141658_44ec4a59e3_o.webp" alt="BMW" class="w-full h-full min-h-[360px] object-cover"></div>
+                <div class="rounded-lg overflow-hidden shadow-md"><img src="img/Polestar_4-6-1024x577.jpg" alt="Polestar" class="w-full h-[200px] object-cover"></div>
+                <div class="rounded-lg overflow-hidden shadow-lg flex-grow"><img src="img/53615141658_44ec4a59e3_o.webp" alt="BMW" class="w-full h-full min-h-[360px] object-cover"></div>
             </div>
         </div>
     </section>
