--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
                         <a href="auditoria.html" class="dropdown-link">Auditoria & Diagnóstico</a>
                         <a href="procurement.html" class="dropdown-link">Procurement & Negociação</a>
                         <a href="gestao-operacional.html" class="dropdown-link">Gestão Operacional</a>
-                        <a href="reparacoes.html" class="dropdown-link">Reparações & Recondicionamentos</a>
                         <a href="automotive-care.html" class="dropdown-link">Automotive Care</a>
                         <a href="luxo.html" class="dropdown-link">Mobilidade de Luxo</a>
                     </div>
@@ -80,6 +79,7 @@
                         <a href="seguros.html" class="dropdown-link">Seguros Automóvel</a>
                         <a href="carregamento.html" class="dropdown-link">Soluções de Carregamento</a>
                         <a href="https://www.cartrack.pt/" target="_blank" class="dropdown-link">Cartrack</a>
+                        <a href="*" target="_blank" class="dropdown-link">Lavagem Auto</a>
                     </div>
                 </div>
 
