--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 <p class="text-sm text-slate-600 mb-6 text-justify">Assumimos a gestão integral da sua mobilidade como o seu departamento de frota externo. Atuamos em todo o ciclo de vida do ativo: desde a vertente administrativa e legal (IUC, IPO, Multas) à consultoria e gestão ativa de seguros e sinistros, garantindo a proteção real do seu capital.
 
 Maximizamos a disponibilidade da sua frota através de uma coordenação rigorosa de manutenções e reparações. No encerramento do ciclo, protegemos a sua rentabilidade com pré-peritagens especializadas e recondicionamentos inteligentes, eliminando custos de devolução imprevistos e potenciando o valor de remarketing. Transformamos a gestão operacional num processo transparente, focado na redução do TCO e na total liberdade da sua equipa.</p>
-                <a href="gestao-operacional.html" class="inline-block bg-brand-green text-white px-6 py-2 rounded-full text-sm font-semibold hover:bg-emerald-600 transition text-center">Exemplos de soluções!</a>
+                <a href="custom_solutions.html" class="inline-block bg-brand-green text-white px-6 py-2 rounded-full text-sm font-semibold hover:bg-emerald-600 transition text-center">Exemplos de soluções!</a>
             </div>
             
             <div data-aos="fade-up" data-aos-delay="200">
