--- a/custom_solutions.html
+++ b/custom_solutions.html
@@ -104,12 +104,12 @@
                 </div>
                 <div class="p-6 md:p-8">
                     <div class="flex justify-between items-start mb-4">
-                        <h3 class="text-xl md:text-2xl font-bold text-brand-navy">Monitorização TCO 360º</h3>
+                        <h3 class="text-xl md:text-2xl font-bold text-brand-navy">Plataforma de Gestão de Viaturas</h3>
                         <span class="bg-emerald-50 text-brand-green text-[10px] font-bold px-3 py-1 rounded-full">Financeiro</span>
                     </div>
-                    <p class="text-slate-600 text-sm mb-6 leading-relaxed">Centralização de custos de combustível e portagens com alertas de desvios automáticos.</p>
+                    <p class="text-slate-600 text-sm mb-6 leading-relaxed">Ponto Focal na gestão de viaturas ao serviço da empresa. Afetação de utilizadores, distribuição por locais, controlo de quilometragem, arquivo de documentação ou até mesmo alertas para a gestão do dia-a-dia. Desenvolvemos soluções à medida das suas necessidades, de acordo com o seu contexto e trazemos know-how que somará à proposta de valor.</p>
                     <div class="pt-4 border-t border-slate-50 text-brand-green font-bold text-xs md:text-sm">
-                        <i class="fa-solid fa-chart-line mr-2"></i> Eficiência real medida em tempo real.
+                        <i class="fa-solid fa-chart-line mr-2"></i> Eficiência e Organização à distância de um clique.
                     </div>
                 </div>
             </div>
@@ -117,7 +117,7 @@
             <div class="case-card" data-aos="fade-up" data-aos-delay="100">
                 <div class="mini-gallery" id="gal-xev">
                     <div class="gallery-wrapper" id="wrapper-xev">
-                        <a href="https://images.unsplash.com/photo-1593941707882-a5bba14938c7?q=80&w=2000" class="glightbox gallery-item" data-gallery="xev">
+                        <a href="img/FleetManager - Grafismo_EDITED.png" class="glightbox gallery-item" data-gallery="xev">
                             <img src="https://images.unsplash.com/photo-1593941707882-a5bba14938c7?w=800" alt="Interface Carregamento">
                             <div class="zoom-overlay"><i class="fa-solid fa-magnifying-glass-plus"></i></div>
                         </a>
